--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="textview">CurrentTime</string>
     <string name="latitude">latitude</string>
+    <string name="city">Radom</string>
     <string name="longitude">longitude</string>
     <string name="refresh_time">refresh time</string>
     <string name="moon">Moon</string>
