--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,18 @@
     <string name="moon">Moon</string>
 
     <string-array name="numbers">
-        <item>1 sec</item>
         <item>10 sec</item>
+        <item>1 sec</item>
         <item>30 sec</item>
         <item>1 min</item>
         <item>5 min</item>
         <item>15 min</item>
+    </string-array>
+
+
+    <string-array name="units">
+        <item>standard</item>
+        <item>metric</item>
+        <item>imperial</item>
     </string-array>
 </resources>
